--- a/css/font.css
+++ b/css/font.css
@@ -2,8 +2,8 @@
 
 @font-face {
   font-family: "Arcane Fable";
-  src: url("ArcaneFable.woff2") format("woff2"),
-    url("ArcaneFable.woff") format("woff");
+  src: url("../fonts/ArcaneFable.woff2") format("woff2"),
+    url("../fonts/ArcaneFable.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -13,8 +13,8 @@
 
 @font-face {
   font-family: "SpiegelSans Trial";
-  src: url("SpiegelSansTrial-ExtraLight.woff2") format("woff2"),
-    url("SpiegelSansTrial-ExtraLight.woff") format("woff");
+  src: url("../fonts/SpiegelSansTrial-ExtraLight.woff2") format("woff2"),
+    url("../fonts/SpiegelSansTrial-ExtraLight.woff") format("woff");
   font-weight: 200;
   font-style: normal;
   font-display: swap;
@@ -22,8 +22,8 @@
 
 @font-face {
   font-family: "SpiegelSans Trial";
-  src: url("SpiegelSansTrial-Light.woff2") format("woff2"),
-    url("SpiegelSansTrial-Light.woff") format("woff");
+  src: url("../fonts/SpiegelSansTrial-Light.woff2") format("woff2"),
+    url("../fonts/SpiegelSansTrial-Light.woff") format("woff");
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -31,8 +31,8 @@
 
 @font-face {
   font-family: "SpiegelSans Trial";
-  src: url("SpiegelSansTrial-ExtraLtIta.woff2") format("woff2"),
-    url("SpiegelSansTrial-ExtraLtIta.woff") format("woff");
+  src: url("../fonts/SpiegelSansTrial-ExtraLtIta.woff2") format("woff2"),
+    url("../fonts/SpiegelSansTrial-ExtraLtIta.woff") format("woff");
   font-weight: 200;
   font-style: italic;
   font-display: swap;
@@ -40,8 +40,8 @@
 
 @font-face {
   font-family: "SpiegelSans Trial";
-  src: url("SpiegelSansTrial-LightItalic.woff2") format("woff2"),
-    url("SpiegelSansTrial-LightItalic.woff") format("woff");
+  src: url("../fonts/SpiegelSansTrial-LightItalic.woff2") format("woff2"),
+    url("../fonts/SpiegelSansTrial-LightItalic.woff") format("woff");
   font-weight: 300;
   font-style: italic;
   font-display: swap;
@@ -49,8 +49,8 @@
 
 @font-face {
   font-family: "SpiegelSans Trial";
-  src: url("SpiegelSansTrial-Regular.woff2") format("woff2"),
-    url("SpiegelSansTrial-Regular.woff") format("woff");
+  src: url("../fonts/SpiegelSansTrial-Regular.woff2") format("woff2"),
+    url("../fonts/SpiegelSansTrial-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -58,8 +58,8 @@
 
 @font-face {
   font-family: "SpiegelSans Trial";
-  src: url("SpiegelSansTrial-SemiLightIta.woff2") format("woff2"),
-    url("SpiegelSansTrial-SemiLightIta.woff") format("woff");
+  src: url("../fonts/SpiegelSansTrial-SemiLightIta.woff2") format("woff2"),
+    url("../fonts/SpiegelSansTrial-SemiLightIta.woff") format("woff");
   font-weight: 300;
   font-style: italic;
   font-display: swap;
@@ -67,8 +67,8 @@
 
 @font-face {
   font-family: "SpiegelSans Trial";
-  src: url("SpiegelSansTrial-ExtraBoldIta.woff2") format("woff2"),
-    url("SpiegelSansTrial-ExtraBoldIta.woff") format("woff");
+  src: url("../fonts/SpiegelSansTrial-ExtraBoldIta.woff2") format("woff2"),
+    url("../fonts/SpiegelSansTrial-ExtraBoldIta.woff") format("woff");
   font-weight: bold;
   font-style: italic;
   font-display: swap;
@@ -76,8 +76,8 @@
 
 @font-face {
   font-family: "SpiegelSans Trial";
-  src: url("SpiegelSansTrial-BoldItalic.woff2") format("woff2"),
-    url("SpiegelSansTrial-BoldItalic.woff") format("woff");
+  src: url("../fonts/SpiegelSansTrial-BoldItalic.woff2") format("woff2"),
+    url("../fonts/SpiegelSansTrial-BoldItalic.woff") format("woff");
   font-weight: bold;
   font-style: italic;
   font-display: swap;
@@ -85,8 +85,8 @@
 
 @font-face {
   font-family: "SpiegelSans Trial";
-  src: url("SpiegelSansTrial-BlackItalic.woff2") format("woff2"),
-    url("SpiegelSansTrial-BlackItalic.woff") format("woff");
+  src: url("../fonts/SpiegelSansTrial-BlackItalic.woff2") format("woff2"),
+    url("../fonts/SpiegelSansTrial-BlackItalic.woff") format("woff");
   font-weight: 900;
   font-style: italic;
   font-display: swap;
@@ -94,8 +94,8 @@
 
 @font-face {
   font-family: "SpiegelSans Trial";
-  src: url("SpiegelSansTrial-Black.woff2") format("woff2"),
-    url("SpiegelSansTrial-Black.woff") format("woff");
+  src: url("../fonts/SpiegelSansTrial-Black.woff2") format("woff2"),
+    url("../fonts/SpiegelSansTrial-Black.woff") format("woff");
   font-weight: 900;
   font-style: normal;
   font-display: swap;
@@ -103,8 +103,8 @@
 
 @font-face {
   font-family: "SpiegelSans Trial";
-  src: url("SpiegelSansTrial-SemiLight.woff2") format("woff2"),
-    url("SpiegelSansTrial-SemiLight.woff") format("woff");
+  src: url("../fonts/SpiegelSansTrial-SemiLight.woff2") format("woff2"),
+    url("../fonts/SpiegelSansTrial-SemiLight.woff") format("woff");
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -112,8 +112,8 @@
 
 @font-face {
   font-family: "SpiegelSans Trial";
-  src: url("SpiegelSansTrial-SemiBoldIta.woff2") format("woff2"),
-    url("SpiegelSansTrial-SemiBoldIta.woff") format("woff");
+  src: url("../fonts/SpiegelSansTrial-SemiBoldIta.woff2") format("woff2"),
+    url("../fonts/SpiegelSansTrial-SemiBoldIta.woff") format("woff");
   font-weight: 600;
   font-style: italic;
   font-display: swap;
@@ -121,8 +121,8 @@
 
 @font-face {
   font-family: "SpiegelSans Trial";
-  src: url("SpiegelSansTrial-Italic.woff2") format("woff2"),
-    url("SpiegelSansTrial-Italic.woff") format("woff");
+  src: url("../fonts/SpiegelSansTrial-Italic.woff2") format("woff2"),
+    url("../fonts/SpiegelSansTrial-Italic.woff") format("woff");
   font-weight: normal;
   font-style: italic;
   font-display: swap;
@@ -130,8 +130,8 @@
 
 @font-face {
   font-family: "SpiegelSans Trial";
-  src: url("SpiegelSansTrial-SemiBold.woff2") format("woff2"),
-    url("SpiegelSansTrial-SemiBold.woff") format("woff");
+  src: url("../fonts/SpiegelSansTrial-SemiBold.woff2") format("woff2"),
+    url("../fonts/SpiegelSansTrial-SemiBold.woff") format("woff");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -139,8 +139,8 @@
 
 @font-face {
   font-family: "SpiegelSans Trial";
-  src: url("SpiegelSansTrial-ExtraBold.woff2") format("woff2"),
-    url("SpiegelSansTrial-ExtraBold.woff") format("woff");
+  src: url("../fonts/SpiegelSansTrial-ExtraBold.woff2") format("woff2"),
+    url("../fonts/SpiegelSansTrial-ExtraBold.woff") format("woff");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -148,8 +148,8 @@
 
 @font-face {
   font-family: "SpiegelSans Trial";
-  src: url("SpiegelSansTrial-Bold.woff2") format("woff2"),
-    url("SpiegelSansTrial-Bold.woff") format("woff");
+  src: url("../fonts/SpiegelSansTrial-Bold.woff2") format("woff2"),
+    url("../fonts/SpiegelSansTrial-Bold.woff") format("woff");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
